--- a/index.html
+++ b/index.html
@@ -30,21 +30,18 @@
 
                     </ul>
                 </nav>
+
                 <div class="ads">
                     <img src="images/Group 1312.png" alt="burger-logo">
                     <h2 class="text-light slogan"> Party Time !</h2>
                     <p class="text-light offer">Buy any 2 burgers and
                         get 1.5L Pepsi Free </p>
                     <button type="button" class="btn btn-warning text-danger rounded-pill"> order now &#8407; </button>
-
-
-
-
-
                 </div>
             </div>
         </div>
     </header>
+
     <section>
         <div class="container-fluid p-0">
             <h3 class="text-danger text-center question">Want to eat?</h3>
@@ -77,6 +74,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <section>
@@ -94,11 +92,141 @@
 
                 </div>
 
-
-
             </div>
         </div>
+    </section>
 
+    <section>
+        <div class="container-fluid p-0">
+            <h3 class="text-danger text-center question1">Our Most Popular Recipes</h3>
+            <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!!</p>
+
+            <div class="d-flex flex-boxes">
+                <div class="card border-0">
+                    <img src="images/1.png" class="card-img-top card-img " alt="sandwich">
+                    <div class="card-body">
+                        <h5 class="card-title">Attribute Variation</h5>
+                        <p class="card-text text-secondary">Chicken, tommato, green salad, pita, ketchup,….</p>
+                        <div class="d-flex align-items-center">
+
+                            <a href="#" class="btn  btn-warning rounded-pill card-btn text-light">Add
+                                To Cart</a>
+                            <h5 class="text-danger price"> $10.99</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-0">
+                    <img src="images/shutterstock_136631573.png" class="card-img-top card-img" alt="pizza">
+                    <div class="card-body">
+                        <h5 class="card-title">Attribute Variation</h5>
+                        <p class="card-text text-secondary">Chicken, tommato, green salad, pita, ketchup,….</p>
+                        <div class="d-flex align-items-center">
+
+                            <a href="#" class="btn  btn-warning rounded-pill card-btn text-light">Add
+                                To Cart</a>
+                            <h5 class="text-danger price"> $10.99</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-0">
+                    <img src="images/background-burgers-home-top.png" class="card-img-top card-img" alt="sandwich">
+                    <div class="card-body">
+                        <h5 class="card-title">Attribute Variation</h5>
+                        <p class="card-text text-secondary">Chicken, tommato, green salad, pita, ketchup,….</p>
+                        <div class="d-flex align-items-center">
+
+                            <a href="#" class="btn  btn-warning rounded-pill card-btn text-light">Add
+                                To Cart</a>
+                            <h5 class="text-danger price"> $10.99</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="d-flex flex-boxes2">
+                <div class="card border-0">
+                    <img src="images/news_image1-min.png" class="card-img-top card-img " alt="humburger">
+                    <div class="card-body">
+                        <h5 class="card-title">Attribute Variation</h5>
+                        <p class="card-text text-secondary">Chicken, tommato, green salad, pita, ketchup,….</p>
+                        <div class="d-flex align-items-center">
+
+                            <a href="#" class="btn  btn-warning rounded-pill card-btn text-light">Add
+                                To Cart</a>
+                            <h5 class="text-danger price"> $10.99</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-0">
+                    <img src="images/news_image2-min.png" class="card-img-top card-img" alt="humbuerger menu">
+                    <div class="card-body">
+                        <h5 class="card-title">Attribute Variation</h5>
+                        <p class="card-text text-secondary">Chicken, tommato, green salad, pita, ketchup,….</p>
+                        <div class="d-flex align-items-center">
+
+                            <a href="#" class="btn  btn-warning rounded-pill card-btn text-light">Add
+                                To Cart</a>
+                            <h5 class="text-danger price"> $10.99</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-0">
+                    <img src="images/news_image3-min.png" class="card-img-top card-img" alt="burger">
+                    <div class="card-body">
+                        <h5 class="card-title">Attribute Variation</h5>
+                        <p class="card-text text-secondary">Chicken, tommato, green salad, pita, ketchup,….</p>
+                        <div class="d-flex align-items-center">
+
+                            <a href="#" class="btn  btn-warning rounded-pill card-btn text-light">Add
+                                To Cart</a>
+                            <h5 class="text-danger price"> $10.99</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class=" bottom-div d-flex justify-content-center">
+            <button type="button" class=" bottom-btn btn btn-danger rounded-pill text-light">show our
+                menu</button>
+        </div>
+    </section>
+
+    <section>
+        <div class="container-fluid p-0">
+            <div class="image-wraper2 d-flex">
+                <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
+                    <img src="images/Path 4276.png" class="card-img card-img1" alt="courier">
+                    <h5 class="top-title text-center">30 minutes
+                        delivery</h5>
+                    <p class="text-secondary bottom-title text-center">Everything you order will be quickly delivered to
+                        your door.</p>
+                </div>
+
+                <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
+                    <img src="images/XMLID_386_.png" class="card-img card-img1" alt="clock">
+                    <h5 class="top-title text-center">Free shipping on
+                        first order</h5>
+                    <p class="text-secondary bottom-title text-center">Sign up for updates and get free shipping</p>
+                </div>
+
+                <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
+                    <img src="images/Path 4281.png" class="card-img card-img1" alt="burger">
+                    <h5 class="top-title text-center">Best quality
+                        guarantee</h5>
+                    <p class="text-secondary bottom-title text-center">We use only the best ingredients to cook the
+                        tasty fresh food for you.</p>
+                </div>
+
+                <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
+                    <img src="images/Group 1366.png" class="card-img card-img1" alt="burger-menu">
+                    <h5 class="top-title text-center">Variety of
+                        dishes</h5>
+                    <p class="text-secondary bottom-title text-center">In our menu you’ll find a wide variety of dishes,
+                        desserts, and drinks.</p>
+                </div>
+            </div>
+        </div>
 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
