--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <header>
         <div class="container-fluid p-0">
             <div class="header-image">
+
                 <nav class="navigation">
                     <ul class="nav justify-content-end nav-ul">
                         <li class="nav-li"> <a class="nav-a text-light" hrf="#">Home</a></li>
@@ -37,6 +38,7 @@
                     <p class="text-light offer">Buy any 2 burgers and
                         get 1.5L Pepsi Free </p>
                     <button type="button" class="btn btn-warning text-danger rounded-pill"> order now &#8407; </button>
+
                 </div>
             </div>
         </div>
@@ -48,27 +50,27 @@
             <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!</p>
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-xl col-lg-6 col-md-12  ">
                         <img class="row" src="images/Group 1400.png" alt="burger">
                         <a class="row icon-a text-dark text-uppercase" href="#"> Burger</a>
                     </div>
-                    <div class="col">
+                    <div class="col-xl col-lg-6 col-md-12 ">
                         <img class="row " src="images/Group 1401.png" alt="pizza">
                         <a class="row icon-a text-dark text-uppercase" href="#"> pizza</a>
                     </div>
-                    <div class="col">
+                    <div class="col-xl col-lg-6 col-md-12">
                         <img class="row" src="images/fries.png" alt="fries">
                         <a class="row icon-a text-dark text-uppercase" href="#"> fast food</a>
                     </div>
-                    <div class="col">
+                    <div class="col-xl col-lg-6 col-md-12">
                         <img class="row" src="images/Group 1402.png" alt="cupcake">
                         <a class="row icon-a text-dark text-uppercase" href="#"> cupcake</a>
                     </div>
-                    <div class="col">
+                    <div class="col-xl col-lg-6 col-md-12">
                         <img class="row" src="images/Path 3872.png" alt="sandwitch">
                         <a class="row icon-a text-dark text-uppercase" href="#"> sandwich</a>
                     </div>
-                    <div class="col">
+                    <div class="col-xl col-lg-6 col-md-12">
                         <img class="row" src="images/Group 1403.png" alt="spaghetti">
                         <a class="row icon-a text-dark text-uppercase" href="#"> spaghetti</a>
                     </div>
@@ -78,30 +80,31 @@
     </section>
 
     <section>
-        <div class="container-fluid p-0">
-            <div class="image-wraper d-flex container-fluid p-0 ">
-                <img class="container-fluid p-0" src="images/shutterstock_334037675.png" alt="courier">
-                <div class="image-box container-fluid p-0">
-                    <h3 class="text-light slogan3"> We Guarantee</h3>
-                    <h3 class="text-light slogan3">30 Minutes Delivery</h3>
-                    <p class="text-light slogan-text">
-                        If you’re having a meeting, working late at night and need an extra push.
+        <!-- <div class="container-fluid p-0"> -->
+        <div
+            class="image-wraper d-flex justify-content-between align-items-center flex-wrap  justify-content-lg-center justify-content-md-center justify-content-sm-center">
+            <img class="courier container-fluid p-0" src="images/shutterstock_334037675.png" alt="courier">
+            <div class="image-box  ">
+                <h3 class="text-light slogan3"> We Guarantee</h3>
+                <h3 class="text-light slogan3">30 Minutes Delivery</h3>
+                <p class="text-light slogan-text">
+                    If you’re having a meeting, working late at night and need an extra push.
 
-                        Let us know and we will be there
-                    </p>
-
-                </div>
+                    Let us know and we will be there
+                </p>
 
             </div>
+
+        </div>
         </div>
     </section>
 
     <section>
         <div class="container-fluid p-0">
-            <h3 class="text-danger text-center question1">Our Most Popular Recipes</h3>
+            <h3 class=" text-danger text-center question1">Our Most Popular Recipes</h3>
             <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!!</p>
 
-            <div class="d-flex flex-boxes">
+            <div class="d-flex flex-wrap justify-content-center flex-boxes">
                 <div class="card border-0">
                     <img src="images/1.png" class="card-img-top card-img " alt="sandwich">
                     <div class="card-body">
@@ -144,8 +147,8 @@
             </div>
 
 
-            <div class="d-flex flex-boxes2">
-                <div class="card border-0">
+            <div class="d-flex flex-wrap justify-content-center flex-boxes2">
+                <div class="card border-0 hover-shadow">
                     <img src="images/news_image1-min.png" class="card-img-top card-img " alt="humburger">
                     <div class="card-body">
                         <h5 class="card-title">Attribute Variation</h5>
@@ -192,9 +195,9 @@
         </div>
     </section>
 
-    <section>
+    <footer>
         <div class="container-fluid p-0">
-            <div class="image-wraper2 d-flex">
+            <div class="image-wraper2 d-flex flex-xl-row flex-wrap ">
                 <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
                     <img src="images/Path 4276.png" class="card-img card-img1" alt="courier">
                     <h5 class="top-title text-center">30 minutes
@@ -228,10 +231,10 @@
             </div>
         </div>
 
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-        </script>
-</body>
+        </section>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+            </script>
+    </footer>
 
 </html>
