change responsive sizes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div
             class="image-wraper d-flex justify-content-between align-items-center flex-wrap  justify-content-lg-center justify-content-md-center justify-content-sm-center">
             <img class="courier container-fluid p-0" src="images/shutterstock_334037675.png" alt="courier">
-            <div class="image-box  ">
+            <div class="image-box ">
                 <h3 class="text-light slogan3"> We Guarantee</h3>
                 <h3 class="text-light slogan3">30 Minutes Delivery</h3>
                 <p class="text-light slogan-text">
@@ -197,19 +197,22 @@
 
     <footer>
         <div class="container-fluid p-0">
-            <div class="image-wraper2 d-flex flex-xl-row flex-wrap ">
+            <div class="image-wraper2 d-flex flex-xl-row flex-wrap justify-content-center">
                 <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
                     <img src="images/Path 4276.png" class="card-img card-img1" alt="courier">
                     <h5 class="top-title text-center">30 minutes
                         delivery</h5>
-                    <p class="text-secondary bottom-title text-center">Everything you order will be quickly delivered to
+                    <div class="line bg-warning"></div>
+                    <p class="text-secondary bottom-title text-center">Everything you order will be
+                        quickly delivered to
                         your door.</p>
                 </div>
 
-                <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
+                <div class=" card-box card border-0 d-flex flex-column  align-items-center p-0">
                     <img src="images/XMLID_386_.png" class="card-img card-img1" alt="clock">
                     <h5 class="top-title text-center">Free shipping on
                         first order</h5>
+                    <div class="line bg-warning"></div>
                     <p class="text-secondary bottom-title text-center">Sign up for updates and get free shipping</p>
                 </div>
 
@@ -217,6 +220,7 @@
                     <img src="images/Path 4281.png" class="card-img card-img1" alt="burger">
                     <h5 class="top-title text-center">Best quality
                         guarantee</h5>
+                    <div class="line bg-warning"></div>
                     <p class="text-secondary bottom-title text-center">We use only the best ingredients to cook the
                         tasty fresh food for you.</p>
                 </div>
@@ -225,7 +229,9 @@
                     <img src="images/Group 1366.png" class="card-img card-img1" alt="burger-menu">
                     <h5 class="top-title text-center">Variety of
                         dishes</h5>
-                    <p class="text-secondary bottom-title text-center">In our menu you’ll find a wide variety of dishes,
+                    <div class="line bg-warning"></div>
+                    <p class="text-secondary bottom-title text-center">In our menu you’ll find a wide variety of
+                        dishes,
                         desserts, and drinks.</p>
                 </div>
             </div>
