--- a/index.html
+++ b/index.html
@@ -32,16 +32,28 @@
                     </ul>
                 </nav>
 
-                <div class="ads">
+                <!-- <div class="ads container-fluid ">
                     <img src="images/Group 1312.png" alt="burger-logo">
                     <h2 class="text-light slogan"> Party Time !</h2>
                     <p class="text-light offer">Buy any 2 burgers and
                         get 1.5L Pepsi Free </p>
                     <button type="button" class="btn btn-warning text-danger rounded-pill"> order now &#8407; </button>
+                </div> -->
+                <div class="ads order-0">
+                    <img src="images/Group 1312.png" class="card-img-top card-img " alt="burger-logo">
+                    <div class="card-body">
+                        <h5 class="slogan text-light ">Party Time!</h5>
+                        <p class=" offer text-light"> Buy any 2 burgers and
+                            get 1.5L Pepsi Free </p>
+                        <div class="d-flex align-items-center">
 
+                            <a href="#" class=" header-btn btn  btn-warning rounded-pill card-btn text-danger"> order
+                                now &#8407;
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </header>
 
     <section>
@@ -50,27 +62,27 @@
             <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!</p>
             <div class="container">
                 <div class="row">
-                    <div class="col-xl col-lg-6 col-md-12  ">
+                    <div class="col-xl col-lg-6  col-md-6 col-sm-6 ">
                         <img class="row" src="images/Group 1400.png" alt="burger">
                         <a class="row icon-a text-dark text-uppercase" href="#"> Burger</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-12 ">
+                    <div class="col-xl col-lg-6  col-md-6 col-sm-6 ">
                         <img class="row " src="images/Group 1401.png" alt="pizza">
                         <a class="row icon-a text-dark text-uppercase" href="#"> pizza</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-12">
+                    <div class="col-xl col-lg-6 col-md-6 col-sm-6 ">
                         <img class="row" src="images/fries.png" alt="fries">
                         <a class="row icon-a text-dark text-uppercase" href="#"> fast food</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-12">
+                    <div class="col-xl col-lg-6 col-md-6 col-sm-6 ">
                         <img class="row" src="images/Group 1402.png" alt="cupcake">
                         <a class="row icon-a text-dark text-uppercase" href="#"> cupcake</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-12">
+                    <div class="col-xl col-lg-6 col-md-6 col-sm-6  ">
                         <img class="row" src="images/Path 3872.png" alt="sandwitch">
                         <a class="row icon-a text-dark text-uppercase" href="#"> sandwich</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-12">
+                    <div class="col-xl col-lg-6 col-md-6 col-sm-6 ">
                         <img class="row" src="images/Group 1403.png" alt="spaghetti">
                         <a class="row icon-a text-dark text-uppercase" href="#"> spaghetti</a>
                     </div>
