--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         get 1.5L Pepsi Free </p>
                     <button type="button" class="btn btn-warning text-danger rounded-pill"> order now &#8407; </button>
                 </div> -->
-                <div class="ads order-0">
+                <div class="ads border-0">
                     <img src="images/Group 1312.png" class="card-img-top card-img " alt="burger-logo">
                     <div class="card-body">
                         <h5 class="slogan text-light ">Party Time!</h5>
