change footer paddings

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <footer>
         <div class="container-fluid p-0">
-            <div class="image-wraper2 d-flex flex-xl-row flex-wrap justify-content-center">
+            <div class="image-wraper2 d-flex flex-xl-row flex-wrap justify-content-center align-items-center">
                 <div class=" card-box card border-0 d-flex flex-column justify-content-center align-items-center p-0">
                     <img src="images/Path 4276.png" class="card-img card-img1" alt="courier">
                     <h5 class="top-title text-center">30 minutes
