change image height

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/bootstrap-utilities.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
@@ -21,7 +22,7 @@
         <div class="container-fluid p-0">
             <div class="header-image">
 
-                <nav class="navigation">
+                <!-- <nav class="navigation">
                     <ul class="nav justify-content-end nav-ul">
                         <li class="nav-li"> <a class="nav-a text-light" hrf="#">Home</a></li>
                         <li class="nav-li"> <a class="nav-a text-light" hrf="#">Menu</a></li>
@@ -30,7 +31,8 @@
                         <li class="nav-li"> <a class="nav-a text-light" hrf="#">Contact us</a></li>
 
                     </ul>
-                </nav>
+                </nav> -->
+
 
                 <!-- <div class="ads container-fluid ">
                     <img src="images/Group 1312.png" alt="burger-logo">
@@ -45,44 +47,44 @@
                         <h5 class="slogan text-light ">Party Time!</h5>
                         <p class=" offer text-light"> Buy any 2 burgers and
                             get 1.5L Pepsi Free </p>
-                        <div class="d-flex align-items-center">
 
-                            <a href="#" class=" header-btn btn  btn-warning rounded-pill card-btn text-danger"> order
-                                now &#8407;
-                            </a>
-                        </div>
+
+                        <a href="#" class=" header-btn btn  btn-warning rounded-pill card-btn text-danger"> order
+                            now
+                            <i class="fa-solid fa-arrow-right-long text-danger"></i>
+                        </a>
                     </div>
                 </div>
             </div>
     </header>
 
     <section>
-        <div class="container-fluid p-0">
+        <div class="container p-0 ">
             <h3 class="text-danger text-center question">Want to eat?</h3>
             <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!</p>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl col-lg-6  col-md-6 col-sm-6 ">
+            <div class="container p-0">
+                <div class="d-flex justify-content-between  flex-wrap">
+                    <div class=" ">
                         <img class="row" src="images/Group 1400.png" alt="burger">
                         <a class="row icon-a text-dark text-uppercase" href="#"> Burger</a>
                     </div>
-                    <div class="col-xl col-lg-6  col-md-6 col-sm-6 ">
+                    <div class="   ">
                         <img class="row " src="images/Group 1401.png" alt="pizza">
                         <a class="row icon-a text-dark text-uppercase" href="#"> pizza</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-6 col-sm-6 ">
+                    <div class=" ">
                         <img class="row" src="images/fries.png" alt="fries">
                         <a class="row icon-a text-dark text-uppercase" href="#"> fast food</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-6 col-sm-6 ">
+                    <div class=" ">
                         <img class="row" src="images/Group 1402.png" alt="cupcake">
                         <a class="row icon-a text-dark text-uppercase" href="#"> cupcake</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-6 col-sm-6  ">
+                    <div class=" ">
                         <img class="row" src="images/Path 3872.png" alt="sandwitch">
                         <a class="row icon-a text-dark text-uppercase" href="#"> sandwich</a>
                     </div>
-                    <div class="col-xl col-lg-6 col-md-6 col-sm-6 ">
+                    <div class="">
                         <img class="row" src="images/Group 1403.png" alt="spaghetti">
                         <a class="row icon-a text-dark text-uppercase" href="#"> spaghetti</a>
                     </div>
@@ -95,6 +97,7 @@
         <!-- <div class="container-fluid p-0"> -->
         <div
             class="image-wraper d-flex justify-content-between align-items-center flex-wrap  justify-content-lg-center justify-content-md-center justify-content-sm-center">
+
             <img class="courier container-fluid p-0" src="images/shutterstock_334037675.png" alt="courier">
             <div class="image-box ">
                 <h3 class="text-light slogan3"> We Guarantee</h3>
@@ -112,7 +115,7 @@
     </section>
 
     <section>
-        <div class="container-fluid p-0">
+        <div class="container p-0">
             <h3 class=" text-danger text-center question1">Our Most Popular Recipes</h3>
             <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!!</p>
 
