--- a/index.html
+++ b/index.html
@@ -19,98 +19,103 @@
 
 <body>
     <header>
-        <div class="container-fluid p-0">
-            <div class="header-image">
-
-                <!-- <nav class="navigation">
-                    <ul class="nav justify-content-end nav-ul">
-                        <li class="nav-li"> <a class="nav-a text-light" hrf="#">Home</a></li>
-                        <li class="nav-li"> <a class="nav-a text-light" hrf="#">Menu</a></li>
-                        <li class="nav-li"> <a class="nav-a text-light" hrf="#">Gallery</a></li>
-                        <li class="nav-li"> <a class="nav-a text-light" hrf="#">Testiminials</a></li>
-                        <li class="nav-li"> <a class="nav-a text-light" hrf="#">Contact us</a></li>
+        <div class="header-image">
+            <nav class="navbar navbar-expand-lg ">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class=""><i class="fa-solid fa-bars text-light "></i></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-light" href="#">Menu </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Gallery </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Testiminials</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link text-light" href="#">Contact us</a>
+                        </li>
 
                     </ul>
-                </nav> -->
+                </div>
+            </nav>
 
-
-                <!-- <div class="ads container-fluid ">
-                    <img src="images/Group 1312.png" alt="burger-logo">
-                    <h2 class="text-light slogan"> Party Time !</h2>
-                    <p class="text-light offer">Buy any 2 burgers and
+            <div class="ads border-0">
+                <img src="images/Group 1312.png" class="card-img-top card-img " alt="burger-logo">
+                <div class="card-body">
+                    <h5 class="slogan text-light ">Party Time!</h5>
+                    <p class=" offer text-light"> Buy any 2 burgers and
                         get 1.5L Pepsi Free </p>
-                    <button type="button" class="btn btn-warning text-danger rounded-pill"> order now &#8407; </button>
-                </div> -->
-                <div class="ads border-0">
-                    <img src="images/Group 1312.png" class="card-img-top card-img " alt="burger-logo">
-                    <div class="card-body">
-                        <h5 class="slogan text-light ">Party Time!</h5>
-                        <p class=" offer text-light"> Buy any 2 burgers and
-                            get 1.5L Pepsi Free </p>
-
-
-                        <a href="#" class=" header-btn btn  btn-warning rounded-pill card-btn text-danger"> order
-                            now
-                            <i class="fa-solid fa-arrow-right-long text-danger"></i>
-                        </a>
-                    </div>
+                    <a href="#" class=" header-btn btn  btn-warning rounded-pill card-btn text-danger"> order
+                        now
+                        <i class="fa-solid fa-arrow-right-long text-danger"></i>
+                    </a>
                 </div>
             </div>
+        </div>
     </header>
 
     <section>
         <div class="container p-0 ">
             <h3 class="text-danger text-center question">Want to eat?</h3>
             <p class="text-center slogan2">Try our Most Delicious food and it usually take minutes to deliver!</p>
-            <div class="container p-0">
-                <div class="d-flex justify-content-between  flex-wrap">
-                    <div class=" ">
-                        <img class="row" src="images/Group 1400.png" alt="burger">
-                        <a class="row icon-a text-dark text-uppercase" href="#"> Burger</a>
-                    </div>
-                    <div class="   ">
-                        <img class="row " src="images/Group 1401.png" alt="pizza">
-                        <a class="row icon-a text-dark text-uppercase" href="#"> pizza</a>
-                    </div>
-                    <div class=" ">
-                        <img class="row" src="images/fries.png" alt="fries">
-                        <a class="row icon-a text-dark text-uppercase" href="#"> fast food</a>
-                    </div>
-                    <div class=" ">
-                        <img class="row" src="images/Group 1402.png" alt="cupcake">
-                        <a class="row icon-a text-dark text-uppercase" href="#"> cupcake</a>
-                    </div>
-                    <div class=" ">
-                        <img class="row" src="images/Path 3872.png" alt="sandwitch">
-                        <a class="row icon-a text-dark text-uppercase" href="#"> sandwich</a>
-                    </div>
-                    <div class="">
-                        <img class="row" src="images/Group 1403.png" alt="spaghetti">
-                        <a class="row icon-a text-dark text-uppercase" href="#"> spaghetti</a>
-                    </div>
+
+            <div class="d-flex justify-content-between  flex-wrap ">
+                <div class="flex-icon-boxes">
+                    <img class="row" src="images/Group 1400.png" alt="burger">
+                    <a class="row icon-a text-dark text-uppercase" href="#"> Burger</a>
+                </div>
+                <div class=" flex-icon-boxes  ">
+                    <img class="row " src="images/Group 1401.png" alt="pizza">
+                    <a class="row icon-a text-dark text-uppercase" href="#"> pizza</a>
+                </div>
+                <div class="flex-icon-boxes ">
+                    <img class="row" src="images/fries.png" alt="fries">
+                    <a class="row icon-a text-dark text-uppercase" href="#"> fast food</a>
+                </div>
+                <div class="flex-icon-boxes ">
+                    <img class="row" src="images/Group 1402.png" alt="cupcake">
+                    <a class="row icon-a text-dark text-uppercase" href="#"> cupcake</a>
+                </div>
+                <div class=" flex-icon-boxes">
+                    <img class="row" src="images/Path 3872.png" alt="sandwitch">
+                    <a class="row icon-a text-dark text-uppercase" href="#"> sandwich</a>
+                </div>
+                <div class="flex-icon-boxes">
+                    <img class="row" src="images/Group 1403.png" alt="spaghetti">
+                    <a class="row icon-a text-dark text-uppercase" href="#"> spaghetti</a>
                 </div>
             </div>
         </div>
+
     </section>
 
     <section>
-        <!-- <div class="container-fluid p-0"> -->
-        <div
-            class="image-wraper d-flex justify-content-between align-items-center flex-wrap  justify-content-lg-center justify-content-md-center justify-content-sm-center">
+        <div class="container-fluid p-0">
+            <div
+                class="image-wraper d-flex justify-content-between align-items-center flex-wrap  justify-content-lg-center justify-content-md-center justify-content-sm-center">
 
-            <img class="courier container-fluid p-0" src="images/shutterstock_334037675.png" alt="courier">
-            <div class="image-box ">
-                <h3 class="text-light slogan3"> We Guarantee</h3>
-                <h3 class="text-light slogan3">30 Minutes Delivery</h3>
-                <p class="text-light slogan-text">
-                    If you’re having a meeting, working late at night and need an extra push.
+                <img class="courier container-fluid p-0" src="images/shutterstock_334037675.png" alt="courier">
+                <div class="image-box ">
+                    <h3 class="text-light slogan3"> We Guarantee</h3>
+                    <h3 class="text-light slogan3">30 Minutes Delivery</h3>
+                    <p class="text-light slogan-text">
+                        If you’re having a meeting, working late at night and need an extra push.
 
-                    Let us know and we will be there
-                </p>
+                        Let us know and we will be there
+                    </p>
+
+                </div>
 
             </div>
-
-        </div>
         </div>
     </section>
 
